--- a/README
+++ b/README
@@ -4,4 +4,4 @@ bundle exec jekyll serve
 
 # Plugins
 
-[Minimal Mistakes theme](https://mmistakes.github.io/minimal-mistakes/)
+Minimal Mistakes theme: https://mmistakes.github.io/minimal-mistakes
