--- a/README
+++ b/README
@@ -1,7 +1,7 @@
-# Usage
+# Usage #
 
 bundle exec jekyll serve
 
-# Plugins
+# Plugins #
 
 Minimal Mistakes theme: https://mmistakes.github.io/minimal-mistakes
