Corrected typo in OSQuery room

--- a/_posts/2022-04-08-osquery.md
+++ b/_posts/2022-04-08-osquery.md
@@ -11,7 +11,10 @@ This is a write up for the [**Osquery**](https://tryhackme.com/room/osqueryf8) c
 ### What is the Osquery version?
 
 The following command will show the version information.
-```.version```
+
+```
+.version
+```
 
 <img src="{{ site.baseurl }}/assets/images/2022-04-08-osquery/01.jpg">
 
@@ -26,7 +29,10 @@ The following command will show the version information.
 ### What is the default output mode?
 
 The following command will show the default output mode.
-```.help```
+
+```
+.help
+```
 
 <img src="{{ site.baseurl }}/assets/images/2022-04-08-osquery/03.jpg">
 
